--- a/src/App.css
+++ b/src/App.css
@@ -3,16 +3,44 @@
   flex-wrap: wrap;
   margin: auto;
 }
+
 .keyBtn{
   margin: 3px;
   background-color: rgb(207, 214, 214);
 }
+
 #keyboard * {
   width: 8.33%;
 }
+
 #Space{
   width: 20%;
 }
+
 #Delete{
   width: 10%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+#keyboard, #textContainer, #bar {
+  margin: 3%;
+}
+
+#textContainer {
+  width: 80%;
+  height: 50vh;
+  border: 1px solid black;
+  margin: auto;
+  white-space: pre-line;
+}
+
+#bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
