--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ body {
 #bar {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content:space-between;
 }
 
 
