--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,9 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  overflow-y: scroll;
 }
 
 #bar {
@@ -99,4 +102,10 @@ body {
 
 #line {
   
+}
+
+span {
+  margin: 0;
+  padding: 0;
+  height: fit-content;
 }
