--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   margin: auto;
   border: 2px solid black;
   padding: 20px;
-  
+  width: 80%;
 }
 
 .keyBtn{
@@ -35,9 +35,10 @@ body {
   margin: 3%;
 }
 
+
 #textContainer {
   width: 80%;
-  height: 50vh;
+  height: 30vh;
   border: 1px solid black;
   margin: auto;
   white-space: pre-line;
@@ -46,9 +47,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 2rem;
-  display: flex;
-  flex-wrap: wrap;
-  overflow-y: scroll;
+    overflow:auto ;
 }
 
 #bar {
@@ -71,7 +70,7 @@ body {
   font-size: 16px;
   font-weight: 600;
   line-height: normal;
-  min-height: 60px;
+  min-height: 10px;
   min-width: 0;
   padding: 16px 24px;
   text-align: center;
