--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 #keyboard {
   display: flex;
   flex-wrap: wrap;
-  margin: auto;
+  margin: 10px auto auto auto;
   border: 2px solid black;
-  padding: 20px;
+  padding: 15px;
   width: 80%;
 }
 
@@ -27,13 +27,11 @@
 
 body {
   display: flex;
-  flex-direction: column;
+  flex-direction: column; 
   justify-content: space-around;
 }
 
-#keyboard, #textContainer, #bar {
-  margin: 3%;
-}
+
 
 
 #textContainer {
@@ -43,7 +41,6 @@ body {
   margin: auto;
   white-space: pre-line;
   padding: 1vw;
-  margin: 50px;
   font-family: 'Montserrat', sans-serif;
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 2rem;
@@ -69,17 +66,15 @@ body {
   font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
   font-size: 16px;
   font-weight: 600;
-  line-height: normal;
   min-height: 10px;
   min-width: 0;
-  padding: 16px 24px;
+  padding: 16px 10px;
   text-align: center;
   text-decoration: none;
   transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  width: 100%;
   will-change: transform;
 }
 
